image mode crash #41716

Closed
opened 2014-09-04 19:50:36 +02:00 by Alexey · 5 comments

System Information
System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.71.6(c670ceb))
Worked: (all official)

Short description of error
this bug appeared with new version of tex paint mode - in 2.71.3;2.71.6

open blender (use only c670ceb)
select cube(or create other object) and go to tex paint(material will created automatic)
select this
image_crash.png
delete material and try to paint - crash
Exact steps for others to reproduce the error
image_crash.blend
open this with c670ceb
select image mode
delete material
try to paint - crash

System Information System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (2.71.6(c670ceb)) Worked: (all official) **Short description of error** this bug appeared with new version of tex paint mode - in 2.71.3;2.71.6 open blender (use only c670ceb) select cube(or create other object) and go to tex paint(material will created automatic) select this ![image_crash.png](https://archive.blender.org/developer/F108825/image_crash.png) delete material and try to paint - crash **Exact steps for others to reproduce the error** [image_crash.blend](https://archive.blender.org/developer/F108828/image_crash.blend) open this with c670ceb select image mode delete material try to paint - crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-04 19:50:36 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-09-04 20:09:24 +02:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-09-04 20:09:24 +02:00

This issue was referenced by 1871c08160

This issue was referenced by 1871c08160b06dcff924ef723979c46a470992cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1871c08160.

Closed by commit 1871c08160.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41716
No description provided.