Fix T41716, crash with image mode when painting without materials.

* As always, make sure all slots of the object have a material